--- a/index.html
+++ b/index.html
@@ -19,29 +19,27 @@
     <main class="container">
       <img
         src="images/image-qr-code.png"
-        alt="frontend-mentor-qr-code"
+        alt="frontend mentor qr code"
         class="qr-img"
       />
 
       <section class="qr-text">
-        <p class="qr-about">
+        <h1 class="qr-about">
           Improve your front-end skills by building projects
-        </p>
+        </h1>
         <p class="qr-info">
           Scan the QR code to visit Frontend Mentor and take your coding skills
           to the next level
         </p>
       </section>
-
-      <div class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded by
-        <a href="https://github.com/Shahbaaz92" target="_blank"
-          >Shahbaaz Athhar</a
-        >.
-      </div>
     </main>
+    <footer class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by
+      <a href="https://github.com/Shahbaaz92" target="_blank">Shahbaaz Athhar</a
+      >.
+    </footer>
   </body>
 </html>
